@@ -4,6 +4,9 @@
 	pam API was already checked. No need to validate it again.
 	* src/chpasswd.c: New functions: process_flags(), check_flags(),
 	check_perms(). Split out of main().
+	* src/chpasswd.c: Other new functions: open_files(), close_files().
+	This force flushing the password database after the password file is
+	unlocked.
 
 2007-12-28  Nicolas François  <nicolas.francois@centraliens.net>
 
